# spp-wagtail

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  compose.yaml  docker-compose.override.yaml  manage.py  prod-entrypoint.sh  pyproject.toml  renovate.json  renovate.json5
.github/: .yamllint.yaml  pa11y.config
.github/workflows/: pa11y.yaml  publish_image.yaml  ruff.yaml  trivy-branch.yaml  trivy-scheduled.yaml  yamllint.yaml
cms/: __init__.py  apps.py  image_formats.py  models.py  urls.py  wagtail_hooks.py
cms/blocks/: __init__.py  alerts.py  cards.py  collapsible.py  data_table.py  last_updated.py  plotly_figure.py  pp_node_info.py  static_figure.py
cms/forms/: __init__.py  contact.py  plp_project.py
cms/handlers/: __init__.py  external_link.py
cms/management/: __init__.py
cms/migrations/: 0001_initial.py  0003_remove_sectionindexpage_section_type.py
cms/pages/: __init__.py  basic_page.py  catalogue.py  contact.py  dashboard.py  dashboard_index.py  drr_dataset.py  highlights_and_editorials.py  highlights_and_editorials_index.py  home.py  liver_resource.py  news.py  news_index.py  outbreaks.py  outbreaks_index.py  plp_index.py  plp_project.py  portal_data.py  section_index.py  standard_page.py  topics.py  topics_index.py
cms/services/: __init__.py  catalogue.py  dashboard_data_validation.py  data_table.py  decorators.py  highlights_and_editorials.py  validators.py
cms/snippets/: __init__.py  dashboard_data.py  drr_dataset_data.py  navigation_menu.py  plp_category.py  site_announcement.py
cms/templatetags/: breadcrumbs.py  navigation_menu.py  plotly_js.py  site_announcements.py  toc.py
cms/tests/: __init__.py  sample_viz.py  test_alert_block.py  test_basic_page.py  test_breadcrumbs.py  test_card_blocks.py  test_catalogue_pages.py  test_collapsible_block.py  test_contact_page.py  test_dashboard_data.py  test_dashboard_data_upload.py  test_dashboard_page.py  test_data_table.py  test_decorators.py  test_drr_compounds.py  test_drr_dataset_page.py  test_drr_precompute.py  test_external_link_handler.py  test_file_hash.py  test_highlights_and_editorials_pages.py  test_image_formats.py  test_last_updated_block.py  test_liver_computation.py  test_liver_dashboard_data.py  test_liver_dashboard_figures.py  test_liver_dashboard_htmx.py  test_liver_edge_cases.py  test_liver_exports.py  test_liver_module_detail.py  test_liver_plotly_tln.py  test_liver_reference_data.py  test_liver_resource_page.py  test_liver_session.py  test_liver_validators.py  test_liver_views.py  test_navigation_menu.py  test_news_pages.py  test_outbreak_pages.py  test_plotly_cdn.py  test_plp_category.py  (+6 more)
cms/views/: __init__.py  contact.py  data_table.py  liver_resource.py
core/: urls.py  views.py  wsgi.py
core/settings/: base.py  development.py  production.py  test.py
dashboard_visualisation/: __init__.py  registry.py  serology_statistics.py
dashboard_visualisation/drr/: __init__.py  figures.py  (+3 more)
dashboard_viz/: __init__.py  npc_statistics.py  registry.py
doc/: README.md
portal_data/: __init__.py  apps.py  context.py  models.py  services.py  urls.py  views.py  wagtail_urls.py
(+334 files in other folders)
