[project]
name = "swedish-pathogens-portal"
version = "0.1.0"
description = "The Swedish Pathogens Portal provides information about available datasets, resources, tools, and services related to pandemic preparedness in Sweden. We offer support to all those involved in pandemic preparedness research that are affiliated with a Swedish research institution or university."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.5",
    "django-environ==0.13.0",
    "django-htmx==1.27.0",
    "django-structlog==10.0.0",
    "fastexcel==0.19.0",
    "markdown==3.10.2",
    "nh3==0.3.5",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "pillow==12.2.0",
    "plotly==6.6.0",
    "polars==1.38.1",
    "wagtail==7.4.1",
]

[dependency-groups]
dev = [
    "django-browser-reload==1.21.0",
    "django-extensions==4.1",
    "pre-commit==4.5.1",
    "psycopg[binary]==3.3.3",
    "ruff==0.15.5",
    "watchdog==6.0.0",
    "werkzeug[watchdog]==3.1.6",
]
prod = [
    "gunicorn==26.0.0",
    "psycopg[c]==3.3.3",
    "wait-for-it==2.3.0",
    "whitenoise==6.12.0",
]
extensions = [
    {include-group = "dev"},
    "pygraphviz==1.14",
]

# Disable UV default dependency-groups
[tool.uv]
default-groups = []

# Ruff linting and formatter settings
[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    "_build",
    ".eggs",
    ".devbox",
    ".git",
    ".github",
    "migrations",
    "node_modules",
    ".pytest_cache",
    "__pycache__",
    ".ruff_cache",
    "site-packages",
    "static",
    "templates",
    ".venv",
    ".vscode",
]

# Indentation-width
indent-width = 4

# Line length
line-length = 100

[tool.ruff.lint]

# Select rules to check for
select = [
    "ANN",  # flake8-annotations (type hints)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle (docstrings)
    "DJ",   # flake8-django
    "E",    # pycodestyle errors (we can restrict to the default subset, which is E4 / E7 / E9)
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "PTH",  # flake8-use-pathlib (enforce pathlib usage)
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
extend-ignore = [
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "D202", # Blank line under function
    "D203", # Contradicts D211 and gives warning
    "D213", # Contradicts D212 and gives warning  
    "D407", # Dashed underline after section
    "D413", # Missing blank line after last section
    "S308", # Use of mark_safe -- ignored assuming all content comes from admin / trusted sources
]

[tool.ruff.format]

# Indent with spaces, rather than tabs.
indent-style = "space"

# Line ending with new line
line-ending = "native"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Use double quotes for strings.
quote-style = "double"

[tool.ruff.lint.per-file-ignores]

# Ignore `ANN201` rule for all test files
"**/test*.py" = ["ANN201"]
